@@ -1,3 +1,8 @@
+2007-11-13  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems.rb: Patch for RUBY_FRAMEWORK for OS X 10.5.  Patch
+	submitted by Laurent Sansonetti.
+
 2007-11-11  Eric Hodel  <drbrain@segment7.net>
 
 	* Rakefile: Tasks for maintaining ruby trunk export of RubyGems.
